# BeitaGo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: AIPlayer.h  Board.h  Constants.h  DeepLearningAIPlayer.h  DumbAIPlayer.h  Engine.h  Grid2.h  HumanPlayer.h  MonteCarloAIPlayer.h  MoveHistoryEntry.h  Player.h
src/Ascii/: Main.cpp
src/DeepLearning/GuessTheMove/: Main.cpp
src/DeepLearning/NetworkTraining/: Main.cpp
src/Engine/: AIPlayer.cpp  Board.cpp  DeepLearningAIPlayer.cpp  DumbAIPlayer.cpp  Engine.cpp  Grid2.cpp  HumanPlayer.cpp  MonteCarloAIPlayer.cpp  MoveHistoryEntry.cpp  Player.cpp
src/Engine/DeepLearning/: MonteCarloNode.cpp  MonteCarloNode.h  MonteCarloTree.cpp  MonteCarloTree.h  NNMonteCarloTree.cpp  NNMonteCarloTree.h  TreeState.cpp  TreeState.h
src/GTP/: GTPEngine.cpp  GTPEngine.h  Main.cpp
src/View/: Main.cpp
srcpy/: ascii.py  gtp.py
srcpy/engine/: aiplayer.py  board.py  constants.py  deeplearningaiplayer.py  dumbaiplayer.py  engine.py  grid2.py  humanplayer.py  player.py
test/: TestDLIB.cpp  TestEngine.cpp  TestEngine.h  TestGrid2.h  TestMain.cpp
ui/: BoardView.cpp  BoardView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
